--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             height: 600px;
             position: relative;
             overflow: hidden;
-            background-image: url('https://via.placeholder.com/800x600.png?text=Paris+Background');
+            background-image: url('images/parisonfire.jpeg?text=Paris+Background');
             background-size: cover;
         }
         .character {
@@ -32,10 +32,10 @@
             transition: all 0.3s ease;
         }
         .angel {
-            background-image: url('https://via.placeholder.com/50x50.png?text=Angel');
+            background-image: url('images/angel.jpeg?text=Angel');
         }
         .demon {
-            background-image: url('https://via.placeholder.com/50x50.png?text=Demon');
+            background-image: url('images/demon.jpeg?text=Demon');
         }
         #scoreboard {
             position: absolute;
